Overhaul del backend: Refactorización integral, seguridad mejorada y documentación Swagger